<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">


        <EditText
            android:id="@+id/inEmail"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:background="@drawable/input_field"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingLeft="16.0dip"
            android:paddingRight="16.0dip"
            android:textColor="#FFF"
            android:textColorHint="#b3ffffff"
            android:textCursorDrawable="@null" />


        <EditText
            android:id="@+id/inPassword"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/input_field"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="16.0dip"
            android:paddingRight="16.0dip"
            android:textColor="#FFF"
            android:textColorHint="#b3ffffff"
            android:textCursorDrawable="@null" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:text="@string/sign_in"
            android:textColor="#FFF"
            android:textSize="28sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btnForgotPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="#FFF"
            android:textSize="16sp" />

    </LinearLayout>


</RelativeLayout>