<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp">


            <EditText
                android:id="@+id/inFirstName"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:background="@drawable/input_field"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/first_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:paddingLeft="16.0dip"
                android:paddingRight="16.0dip"
                android:textColor="#FFF"
                android:textColorHint="#b3ffffff"
                android:textCursorDrawable="@null" />


            <EditText
                android:id="@+id/inLastName"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/input_field"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/last_name"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:paddingLeft="16.0dip"
                android:paddingRight="16.0dip"
                android:textColor="#FFF"
                android:textColorHint="#b3ffffff"
                android:textCursorDrawable="@null" />


            <EditText
                android:id="@+id/inEmail"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/input_field"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="16.0dip"
                android:paddingRight="16.0dip"
                android:textColor="#FFF"
                android:textColorHint="#b3ffffff"
                android:textCursorDrawable="@null" />


            <EditText
                android:id="@+id/inPassword"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/input_field"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="16.0dip"
                android:paddingRight="16.0dip"
                android:textColor="#FFF"
                android:textColorHint="#b3ffffff"
                android:textCursorDrawable="@null" />


            <EditText
                android:id="@+id/inConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/input_field"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="sans-serif-light"
                android:hint="@string/confirm_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="16.0dip"
                android:paddingRight="16.0dip"
                android:textColor="#FFF"
                android:textColorHint="#b3ffffff"
                android:textCursorDrawable="@null" />


            <EditText
                android:id="@+id/inPhone"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/input_field"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/phone"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="1"
                android:paddingLeft="16.0dip"
                android:paddingRight="16.0dip"
                android:textColor="#FFF"
                android:textColorHint="#b3ffffff"
                android:textCursorDrawable="@null" />


            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:text="@string/register"
                android:textColor="#FFF"
                android:textSize="28sp"
                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>